Split jdk8 jdk21 (#277)
* Init jdk21

* Add Executors.newVirtualThreadPerTaskExecutor() with error

* Add jdk8 examples

* Refactor jdk8 examples

* Refactor jdk21 examples

* Remove code commented